# codesec-recycling

./: Cargo.toml  README.md  index.html
src/: fact.rs  header.rs  main.rs  map.rs  messages.rs
src/fact/: counter.rs  pictogram.rs
static/: style.scss
